# convert_data

./: .env  .gitignore  Makefile  README.md  ROADMAP.md  config.yaml  get_sample_data.py  get_tf_data.py  my_test_script.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: architecture.md  cli.md  configuration.md  format_reference.md  model_formats.md
examples/: conversion_config.yaml  test_config.yaml
forge/: __init__.py  cli.py
forge/config/: __init__.py  models.py
forge/convert/: __init__.py  converter.py
forge/core/: __init__.py  exceptions.py  models.py  protocols.py
forge/filter/: README.md  __init__.py  engine.py
forge/formats/: __init__.py  registry.py
forge/formats/groot/: __init__.py  reader.py
forge/formats/hdf5/: __init__.py  reader.py
forge/formats/lerobot_v2/: __init__.py  reader.py
forge/formats/lerobot_v3/: __init__.py  reader.py  writer.py
forge/formats/rlds/: __init__.py  reader.py  writer.py
forge/formats/robodm/: __init__.py  reader.py  writer.py
forge/formats/rosbag/: __init__.py  reader.py
forge/formats/zarr/: __init__.py  reader.py
forge/hub/: __init__.py  download.py  url.py
forge/inspect/: __init__.py  inspector.py  schema_analyzer.py  stats_collector.py
forge/quality/: README.md  __init__.py  analyzer.py  config.py  metrics.py  models.py
forge/video/: __init__.py  encoder.py
forge/visualize/: __init__.py  cv_viewer.py  unified_viewer.py  viewer.py
sample_data/d4rl_mujoco_halfcheetah/.config/: metadata.json
sample_data/d4rl_mujoco_halfcheetah/v0-medium/1.2.0/: dataset_info.json  features.json
sample_data/groot/gr1_arms_only.CanSort/meta/: episodes.jsonl  info.json  tasks.jsonl
sample_data/robomimic_ph/.config/: metadata.json
sample_data/robomimic_ph/can_ph_image/1.0.1/: features.json
tests/: conftest.py  test_cli.py  test_converter.py  test_exceptions.py  test_filter.py  test_hdf5.py  test_hub.py  test_inspector.py  test_lerobot_v3_writer.py  test_models.py  test_quality.py  test_readers.py  test_registry.py  test_rlds_writer.py  test_video_encoder.py
